Fixed title bar overflow

--- a/ts-paint/src/app/components/modal-window/modal-window.component.less
+++ b/ts-paint/src/app/components/modal-window/modal-window.component.less
@@ -50,10 +50,13 @@
   letter-spacing: 1px;
   padding: 2px;
   box-sizing: border-box;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .tsp-modal-window__title-bar-icon {
   display: block;
+  min-width: 16px;
   width: 16px;
   height: 16px;
   margin-top: -1px;
